--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <a href="leitor.py" download>
-    <button value="Baixar o Leitor de mensagens super secreto!"></button>
+    <button>Baixar o Leitor de mensagens super secreto!</button>
 </a>
