--- a/segredo.html
+++ b/segredo.html
@@ -1,5 +1,5 @@
 <title>Pato Secreto!!!</title>
 <center>
   <img src="patolino-o-mago.jpg">
-  <iframe width="1500" height="518" src="https://www.youtube.com/embed/pAGrykAxkB4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay></iframe>
+  <iframe width="25%" height="518" src="https://www.youtube.com/embed/pAGrykAxkB4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay></iframe>
 <center>
