--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <br></br>
     <br></br>
     <br></br>
-<a href="leitor.py" download>
-    <button>Baixar o Leitor de mensagens super secreto!</button>
-</a>
-<br>
-    Não é virus não, ta tranquilo
+    <a href="leitor.py" download>
+        <button>Baixar o Leitor de mensagens super secreto!</button>
+    </a>
+    <br>
+        Não é virus não, ta tranquilo
+</center>
