--- a/segredo.html
+++ b/segredo.html
@@ -1,9 +1,9 @@
 <title>Pato Secreto!!!</title>
 <center>
-    <img src="lino.png" width="50px" height="50px">
-    <img src="mais.png" width="50px" height="50px">
-    <img src="pato.png" width="50px" height="50px">
-    <img src="patolino-o-mago.png" width="50px" height="50px">
+    <img src="img/lino.png" width="50px" height="50px">
+    <img src="img/mais.png" width="50px" height="50px">
+    <img src="img/pato.png" width="50px" height="50px">
+    <img src="img/patolino-o-mago.png" width="50px" height="50px">
     <iframe width="25%" height="518" src="https://www.youtube.com/embed/pAGrykAxkB4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay></iframe>
 
 <center>
