--- a/segredo.html
+++ b/segredo.html
@@ -7,6 +7,6 @@
     <img src="img/patolino-o-mago.png" width="200px" height="200px">
     <br></br>
     <br></br>
-    <iframe width="25%" height="518" src="https://www.youtube.com/embed/pAGrykAxkB4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay></iframe>
+    <iframe width="800px" height="400px" src="https://www.youtube.com/embed/pAGrykAxkB4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay></iframe>
 
 <center>
