--- a/naval/batalha-naval.html
+++ b/naval/batalha-naval.html
@@ -14,17 +14,17 @@
 		<div class="barquenhos">
 		<table border="1px">
 			<tr>
-				<td width="40px" height="40px"><img src="img/x.png" width="40px" height="40px"></td>
-				<td width="40px" height="40px"><img src="img/a.png" width="40px" height="40px"></td>
-				<td width="40px" height="40px"><img src="img/b.png" width="40px" height="40px"></td>
-				<td width="40px" height="40px"><img src="img/c.png" width="40px" height="40px"></td>
-				<td width="40px" height="40px"><img src="img/d.png" width="40px" height="40px"></td>
-				<td width="40px" height="40px"><img src="img/e.png" width="40px" height="40px"></td>
-				<td width="40px" height="40px"><img src="img/f.png" width="40px" height="40px"></td>
-				<td width="40px" height="40px"><img src="img/g.png" width="40px" height="40px"></td>
-				<td width="40px" height="40px"><img src="img/h.png" width="40px" height="40px"></td>
-				<td width="40px" height="40px"><img src="img/i.png" width="40px" height="40px"></td>
-				<td width="40px" height="40px"><img src="img/j.png" width="40px" height="40px"></td>
+				<td width="40px" height="40px"><img src="img/X.png" width="40px" height="40px"></td>
+				<td width="40px" height="40px"><img src="img/A.png" width="40px" height="40px"></td>
+				<td width="40px" height="40px"><img src="img/B.png" width="40px" height="40px"></td>
+				<td width="40px" height="40px"><img src="img/C.png" width="40px" height="40px"></td>
+				<td width="40px" height="40px"><img src="img/D.png" width="40px" height="40px"></td>
+				<td width="40px" height="40px"><img src="img/E.png" width="40px" height="40px"></td>
+				<td width="40px" height="40px"><img src="img/F.png" width="40px" height="40px"></td>
+				<td width="40px" height="40px"><img src="img/G.png" width="40px" height="40px"></td>
+				<td width="40px" height="40px"><img src="img/H.png" width="40px" height="40px"></td>
+				<td width="40px" height="40px"><img src="img/I.png" width="40px" height="40px"></td>
+				<td width="40px" height="40px"><img src="img/J.png" width="40px" height="40px"></td>
 			</tr>
 			<tr>
 				<td width="40px" height="40px"><img src="img/1.png" class="squarenix"></td> <!--1 linha é n°--><!--[x,y]-->
