--- a/naval/batalha-naval.html
+++ b/naval/batalha-naval.html
@@ -161,17 +161,17 @@
 		<div class="barquenhos">
 			<table border="1px"> <!--2 table-->
 				<tr> <!--letras-->
-					<td width="40px" height="40px"><img src="img/x.png" class="squarenix"></td>
-					<td width="40px" height="40px"><img src="img/a.png" class="squarenix"></td>
-					<td width="40px" height="40px"><img src="img/b.png" class="squarenix"></td>
-					<td width="40px" height="40px"><img src="img/c.png" class="squarenix"></td>
-					<td width="40px" height="40px"><img src="img/d.png" class="squarenix"></td>
-					<td width="40px" height="40px"><img src="img/e.png" class="squarenix"></td>
-					<td width="40px" height="40px"><img src="img/f.png" class="squarenix"></td>
-					<td width="40px" height="40px"><img src="img/g.png" class="squarenix"></td>
-					<td width="40px" height="40px"><img src="img/h.png" class="squarenix"></td>
-					<td width="40px" height="40px"><img src="img/i.png" class="squarenix"></td>
-					<td width="40px" height="40px"><img src="img/j.png" class="squarenix"></td>
+					<td width="40px" height="40px"><img src="img/X.png" class="squarenix"></td>
+					<td width="40px" height="40px"><img src="img/A.png" class="squarenix"></td>
+					<td width="40px" height="40px"><img src="img/B.png" class="squarenix"></td>
+					<td width="40px" height="40px"><img src="img/C.png" class="squarenix"></td>
+					<td width="40px" height="40px"><img src="img/D.png" class="squarenix"></td>
+					<td width="40px" height="40px"><img src="img/E.png" class="squarenix"></td>
+					<td width="40px" height="40px"><img src="img/F.png" class="squarenix"></td>
+					<td width="40px" height="40px"><img src="img/G.png" class="squarenix"></td>
+					<td width="40px" height="40px"><img src="img/H.png" class="squarenix"></td>
+					<td width="40px" height="40px"><img src="img/I.png" class="squarenix"></td>
+					<td width="40px" height="40px"><img src="img/J.png" class="squarenix"></td>
 				</tr>
 				<tr>
 					<td width="40px" height="40px"><img src="img/1.png" class="squarenix"></td> <!--1 linha é n°--><!--[x,y]-->
