--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1>Links desse Repo:</h1>
 <hr>
 <h2>Batalha Naval</h2>
-<a href="https://alkovalski.github.io/naval/batalha-naval.html">Batalha Naval</a>
+<a href="https://alkovalski.github.io/naval/batalha-naval.html">Jogar Batalha Naval</a>
 <hr>
 <h2><a href="https://github.com/danielnowakassis/Dividas-do-Vilmar/tree/atual">Trab III</a> Experiência Criativa</h2>
 <a href="https://alkovalski.github.io/site-vilmar/index.html">Download Super Secreto do Leitor de Imagem</a><br>
