--- a/index.html
+++ b/index.html
@@ -7,3 +7,7 @@
 <a href="https://alkovalski.github.io/site-vilmar/index.html">Download Super Secreto do Leitor de Imagem</a><br>
 <a href="https://alkovalski.github.io/site-vilmar/segredo.html">Segredo do Pato</a>
 <hr>
+<hr>
+<h2>Sonic de HTML</h2>
+<a href="https://alkovalski.github.io/sonic/index.html">Testar vAlpha-0.2 do Sonic</a>
+<hr>
