--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
-<h1>Links desse Repo:</h1>
-<hr>
-<h2>Batalha Naval</h2>
-<a href="https://alkovalski.github.io/naval/batalha-naval.html">Jogar Batalha Naval</a>
-<hr>
-<h2><a href="https://github.com/danielnowakassis/Dividas-do-Vilmar/tree/atual">Trab III</a> Experiência Criativa</h2>
-<a href="https://alkovalski.github.io/site-vilmar/index.html">Download Super Secreto do Leitor de Imagem</a><br>
-<a href="https://alkovalski.github.io/site-vilmar/segredo.html">Segredo do Pato</a>
-<hr>
-<hr>
-<h2>Sonic de HTML</h2>
-<a href="https://alkovalski.github.io/sonic/index.html">Testar vAlpha-0.2 do Sonic</a>
-<hr>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Repo de Links</title>
+  </head>
+  <body background-color="#f0f8ff">
+    <h1>Links desse Repo:</h1>
+    <a href="https://github.com/Kovalski-rgb">Eu</a>
+    <hr>
+    <h2>Batalha Naval</h2>
+      <a href="https://alkovalski.github.io/naval/batalha-naval.html">Jogar Batalha Naval</a>
+    <hr>
+    <h2><a href="https://github.com/danielnowakassis/Dividas-do-Vilmar/tree/atual">Trab III</a> Experiência Criativa</h2>
+      <a href="https://alkovalski.github.io/site-vilmar/index.html">Download Super Secreto do Leitor de Imagem</a><br>
+      <a href="https://alkovalski.github.io/site-vilmar/segredo.html">Segredo do Pato</a>
+    <hr>
+    <h2>Sonic de HTML</h2>
+      <a href="https://alkovalski.github.io/sonic/index.html">Testar vAlpha-0.2 do Sonic</a>
+    <hr>
+  </body>
+</html>
