--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <title>Repo de Links</title>
   </head>
   <body background-color="#f0f8ff">
-    <h1>Links desse Repo:</h1>
-    <a href="https://github.com/Kovalski-rgb">Eu</a>
+    <h1>Sites acessiveis:</h1>
     <hr>
     <h2>Batalha Naval</h2>
       <a href="https://alkovalski.github.io/naval/batalha-naval.html">Jogar Batalha Naval</a>
